<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.urssu_task2.viewModel.SignUpViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="17dp"
            android:text="@string/signup"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_cancel"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_x"
            app:layout_constraintBottom_toBottomOf="@+id/tv_signup_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_signup_title" />

        <TextView
            android:id="@+id/tv_enter_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/enter_password"
            android:textColor="@color/text_primary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_signup_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            style="@style/textInputLayout_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@{viewModel.checkPasswordState}"
            app:boxStrokeWidth="2dp"
            app:endIconDrawable="@drawable/ic_x"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_enter_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@={viewModel.password}"
                android:textColor="@color/text_secondary"
                android:textSize="15sp"
                tools:text="@string/input_password_example" />

            <requestFocus />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/helper"
            android:textSize="12sp"
            app:helperTextColor="@{viewModel.checkPasswordState}"
            app:layout_constraintStart_toStartOf="@+id/layout_password"
            app:layout_constraintTop_toBottomOf="@+id/layout_password" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/btn_background"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/button_next"
            android:textSize="16sp"
            app:backgroundTint="@{viewModel.checkPasswordState}"
            app:enabled="@{viewModel.checkPasswordState}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>